<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    >

    <TextView
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:text="@string/app_name"
        android:textFontWeight="900"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorZero"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:hint="@string/sName"
        android:id="@+id/txtNome"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorZero"
        android:background="@color/colorEdit"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:hint="@string/sEmail"
        android:id="@+id/txtEmail"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorZero"
        android:background="@color/colorEdit"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:hint="@string/sPassword"
        android:id="@+id/txtPass"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorZero"
        android:background="@color/colorEdit"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:padding="15dp"
        android:text="@string/sSave"
        android:id="@+id/btnSave"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorZero"
        android:background="@color/colorButton"
        />
</LinearLayout>