<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:gravity="center"
    android:background="@color/colorBackground"
    android:padding="20dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/login_user"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:hint="@string/sEmail"
        android:id="@+id/txtEmailLogin"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorZero"
        android:background="@color/colorEdit"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:hint="@string/sPassword"
        android:id="@+id/txtPassLogin"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorZero"
        android:background="@color/colorEdit"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/sLogin"
        android:id="@+id/btnLogin"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorBackground"
        android:background="@color/colorButton"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarLogin"
        android:paddingTop="30dp"
        android:visibility="gone"/>

</LinearLayout>